new URI instead of new URL, deviantart, flickr.