@@ -13,6 +13,8 @@ import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.io.Serializable;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -381,11 +383,11 @@ public class DeviantartRipper extends AbstractHTMLRipper {
 		try {
 			String url = cleanURL();
 			if (this.usingCatPath) {
-				return (new URL(url + "?catpath=/&offset=" + offset));
+				return (new URI(url + "?catpath=/&offset=" + offset)).toURL();
 			} else {
-				return (new URL(url + "?offset=" + offset));
+				return (new URI(url + "?offset=" + offset).toURL());
 			}
-		} catch (MalformedURLException e) {
+		} catch (MalformedURLException | URISyntaxException e) {
 			e.printStackTrace();
 		}
 		return null;
@@ -531,8 +533,6 @@ public class DeviantartRipper extends AbstractHTMLRipper {
 		/**
 		 * Get URL to Artwork and return fullsize URL with file ending.
 		 * 
-		 * @param page Like
-		 *             https://www.deviantart.com/apofiss/art/warmest-of-the-days-455668450
 		 * @return URL like
 		 *         https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/07f7a6bb-2d35-4630-93fc-be249af22b3e/d7jak0y-d20e5932-df72-4d13-b002-5e122037b373.jpg
 		 * 
@@ -628,11 +628,11 @@ public class DeviantartRipper extends AbstractHTMLRipper {
 				}
 				String[] tmpParts = downloadString.split("\\."); //split to get file ending
 				
-				addURLToDownload(new URL(downloadString), "", "", "", new HashMap<String, String>(),
+				addURLToDownload(new URI(downloadString).toURL(), "", "", "", new HashMap<String, String>(),
 						title + "." + tmpParts[tmpParts.length - 1]);
 				return;
 
-			} catch (IOException e) {
+			} catch (IOException | URISyntaxException e) {
 				e.printStackTrace();
 			}
 
